# parallel_programming_course

modules/task_1/ponomarev_a_linear_filter_omp/: CMakeLists.txt  main.cpp
modules/task_2/ponomarev_a_linear_filter_task2_omp/: main.cpp
modules/task_3/ponomarev_a_linear_filter_tbb/: main.cpp
