set(PROJECT_NAME "ponomarev_a_linear_filter_omp_show")

if ( USE_OMP )
    project( ${PROJECT_NAME} )
    message( STATUS "-- " ${PROJECT_NAME} )
	# find_package( OpenCV REQUIRED )
	# include_directories( ${OpenCV_INCLUDE_DIRS} )
	# message("OpenCV_INCLUDE_DIRS = " ${OpenCV_INCLUDE_DIRS})
    add_executable( ${PROJECT_NAME} main.cpp )
	# target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )
	# message("OpenCV_LIBS = " ${OpenCV_LIBS})
else( USE_OMP )
    message( STATUS "-- ${PROJECT_NAME} - NOT BUILD!"  )
endif( USE_OMP )